# WorkoutApp-Backend

./: .gitignore  README.md  alembic.ini  notes.txt  pyproject.toml  requirements.txt
Alembic/: env.py
Alembic/versions/: 226a967f9de4_fixing_a_col.py  34d226434832_fix_foreign_key.py  412c035694da_fixing_a_col.py  41c7379feebb_fixing_a_col.py  4e4176bd9c46_deleted_email_off_of_progress_table_and_.py  514c0cba2241_create_users_and_workouts_table.py  5f625081d61c_adjusted_user_role_to_role.py  8b49e839b240_added_progress_table_col.py  9da1dd8496e4_create_users_and_workouts_table.py  9fb7972db880_added_user_col_to_workout_table.py  b1591018c4bb_update_col_name.py  b9b9105d8204_added_created_at_for_progress_table.py  c8876353c396_adding_role.py  c8cfb35f783f_updated_total_workouts_to_goal_workouts_.py  d786248ad42d_added_logout_table.py  f77af2a45b8c_added_created_at_in_workout.py
app/: allroles.txt  main.py  pyproject.toml
app/core/: config.py  oauth2.py  utils.py
app/database/: database.py
app/model/: model.py
app/routers/: admin.py  auth.py  progress.py  user_router.py  workouts.py
app/schemas/: schemas.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Navbar.tsx  WorkoutCard.tsx  WorkoutForm.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/types/: index.ts
