[project]
name = "project-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "bcrypt==4.0.1",
    "fastapi[all]>=0.138.0",
    "jose>=1.0.0",
    "jwt>=1.4.0",
    "npm>=0.1.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pwdlib>=0.3.0",
    "pydantic>=2.13.4",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.51",
]

[tool.uv.workspace]
members = [
    "app",
]
